--- a/projeto-concreta/WebSites/src/app/contato/contato.component.html
+++ b/projeto-concreta/WebSites/src/app/contato/contato.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <h2>Fale Conosco</h2>
 <form [formGroup]="formGroup">
     <input type="text" formControlName="nome" placeholder="Nome" required />
