--- a/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
@@ -5,6 +5,56 @@
   height: 100vh;
 }
 
+.modal {
+  background: rgba(240, 240, 240, 0.9);
+  padding: 2rem;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  font-family: 'Montserrat', sans-serif;
+  width: 400px;
+  height: auto;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.modal h2 {
+  color: #023059;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.modal p {
+  color: #023059;
+  font-weight: bold;
+}
+
+.modal input[type="radio"] {
+  margin: 0.5rem;
+}
+
+.modal label {
+  color: #023059;
+  font-weight: bold;
+  margin-right: 1rem;
+}
+
+.modal .create-button {
+  background-color: #F2B705;
+  color: #023059;
+  border: none;
+  border-radius: 8px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 0.9rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.modal .create-button:hover {
+  background-color: #e6e600;
+}
+
 .create-account-box {
   background-color: #023059;
   width: 470px;
@@ -97,3 +147,5 @@
   text-decoration: none;
   font-size: 0.6rem;
 }
+
+
