Integração Cadastr/Login

--- a/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.html
@@ -60,10 +60,5 @@
   </div>
 </div>
 
-<div *ngIf="mensagem" class="overlay" (click)="fecharMensagem()">
-  <div class="modal">
-    <p>{{ mensagem }}</p>
-  </div>
-</div>
-
+<p-toast></p-toast>
 <app-footer></app-footer>
