--- a/src/EcoLogic/pages/adm/style.css
+++ b/src/EcoLogic/pages/adm/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    font-size: 1rem; 
+    font-size: 1rem;
 }
 
 header {
@@ -95,8 +95,8 @@ aside {
 }
 
 .search-bar input {
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
     border: none;
     background: none;
     color: #fff;
@@ -277,24 +277,25 @@ aside {
 main {
     flex: 1;
     display: flex;
-    flex-direction: column;  
-    align-items: center;    
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
 }
 
 main h1 {
-    text-align: center;      
-    margin-bottom: 10px; 
+    text-align: center;
+    margin-bottom: 10px;
     font-family: 'Saira Condensed', sans-serif;
-    margin-top: 3rem;
     font-weight: 500;
     line-height: 40px;
     letter-spacing: 0.5px;
+    margin-top: 2rem;
 }
 
 main h2 {
-    font-size: 1.8rem; 
-    text-align: center;    
+    font-size: 1.8rem;
+    text-align: center;
     margin-bottom: 20px;
     font-family: 'Saira Condensed', sans-serif;
     margin-top: 4rem;
@@ -305,9 +306,9 @@ main h2 {
 }
 
 .content-article {
-    width: 80%;             
-    max-width: 600px;       
-    margin: 0 auto;          
+    width: 80%;
+    max-width: 600px;
+    margin: 0 auto;
     padding: 20px;
     border-radius: 8px;
     background-color: #282626e9;
@@ -316,7 +317,7 @@ main h2 {
 .content-article h3 {
     font-size: 1.2rem;
     color: #fff;
-    text-align: center;     
+    text-align: center;
     margin-bottom: 20px;
     font-family: 'Saira Condensed', sans-serif;
     margin-top: 16px;
@@ -326,55 +327,67 @@ main h2 {
 #total-usinas {
     font-size: 2rem;
     color: #fff;
-    text-align: center; 
+    text-align: center;
     margin-bottom: 16px;
 }
 
 #total-fontes {
     font-size: 2rem;
     color: #fff;
-    text-align: center; 
+    text-align: center;
     margin-bottom: 16px;
 }
 
 .form-section {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     margin-top: 20px;
     padding: 20px;
     border-radius: 8px;
-
-    width: 70%; /* ou 100% */
-    max-width: none; 
+    width: 100%;
+    max-width: 800px;
 }
 
 .form-section h2 {
-    margin-bottom: 36px; 
+    margin-bottom: 36px;
 }
-
 
 .registration-form {
     display: flex;
     flex-direction: column;
+    gap: 16px;
+    align-items: center;
 }
 
 .form-group {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
+    flex-direction: column;
+    align-items: center;
     color: #F3F3F3;
     font-family: "Saira Condensed";
     font-size: 16px;
     font-weight: 100;
     line-height: 50px;
     letter-spacing: 0.5px;
-    margin-bottom: 30px;
-    flex-wrap: wrap;
-
+    margin-bottom: 16px;
 }
 
 .form-group input {
+    display: flex;
+    width: 500px;
+    padding: 16px;
+    border: 1px solid #8DB5AD;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: #8DB5AD;
+    color: #F3F3F3;
+    justify-content: center;
+}
+
+.form-group textarea {
+    display: flex;
     width: 400px;
     padding: 16px;
     border: 1px solid #8DB5AD;
@@ -384,35 +397,30 @@ main h2 {
     color: #F3F3F3;
 }
 
-.form-group label {
-    width: 200px;
-    font-size: 12px;
-}
-
-.form-group textarea {
-    height: 100px; 
-}
-
-
-
 input::placeholder,
 textarea::placeholder {
     color: #FFFFFF;
     opacity: 0.8;
 }
 
-textarea {
-    width: 100%;
-    padding: 16px;
-    margin-bottom: 15px;
-    border: 1px solid #8DB5AD;
-    border-radius: 5px;
-    box-sizing: border-box;
-    background: #8DB5AD;
+.submit-btn {
+    display: flex;
+    padding: 13px 50px;
+    background-color: #1D6B59;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 18px;
+    backdrop-filter: blur(4px);
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    margin: 0 auto;
+    margin-top: 30px;
 }
 
 button,
 .submit-btn {
+    display: flex;
     padding: 13px 50px;
     background-color: #1D6B59;
     color: #fff;
