--- a/src/EcoLogic/pages/adm/style.css
+++ b/src/EcoLogic/pages/adm/style.css
@@ -262,8 +262,7 @@ aside {
     transition: background-color 0.3s;
     backdrop-filter: blur(4px);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
-    margin-top: 56rem;
-    margin-bottom: 10rem;
+    margin-top: 86rem;
 }
 
 .botaonsair button:hover {
@@ -338,11 +337,19 @@ main h2 {
     margin-bottom: 16px;
 }
 
+.prodtotal {
+    font-family: 'Saira Condensed', sans-serif;
+    font-weight: 100;
+    line-height: 40px;
+    font-size: 26px;
+    margin-top: 3rem;
+}
+
 .form-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 16rem;
     padding: 20px;
     border-radius: 8px;
     width: 100%;
@@ -415,7 +422,8 @@ textarea::placeholder {
     backdrop-filter: blur(4px);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 80px;
+    margin-bottom: 10rem;
 }
 
 button,
