--- a/src/EcoLogic/pages/relatorios/style.css
+++ b/src/EcoLogic/pages/relatorios/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: 'Saira Condensed', sans-serif;
     box-sizing: border-box;
+    letter-spacing: 0.5px;
 }
 
 body {
@@ -71,7 +72,7 @@ header {
 aside {
     background: #1D6B59;
     width: 375px;
-    height: 1028px;
+    height: 100%;
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25) inset;
     top: 175px;
     gap: 0px;
@@ -262,11 +263,24 @@ aside {
     transition: background-color 0.3s;
     backdrop-filter: blur(4px);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
-    margin-top: 16rem;
+    margin-top: 60rem;
+    margin-bottom: 16rem;
 }
 
 .botaonsair button:hover {
     background-color: #8DB5AD;
+}
+
+.corpo {
+    display: flex;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;  
+    align-items: center;    
+    padding: 20px;
 }
 
 footer {
@@ -303,4 +317,153 @@ footer {
 .social-icons img {
     width: 24px;
     height: 24px;
+}
+
+h1{
+    margin-top: 40px;
+    font-size: 40px;
+}
+
+h2{
+    font-size: 36px;
+    font-weight: 100;
+}
+
+#usinas{
+    background-color: #2A2A2A;
+    border-radius: 16px;
+    width: 451px;
+    height: 155px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    margin-top: 46px;
+}
+
+#usinas-cadastradas{
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+#Produção>p>span{
+    font-weight: bold;
+}
+
+#relatorios{
+    align-self:normal;
+    margin-left: 107px;
+    margin-top: 80px;
+    
+}
+
+#background{
+    width: 451px;
+    height: 269px;
+    background-image: url(../../images/relatorios.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 40px;
+}
+
+#info-container{
+    display: flex;
+}
+
+#info{
+    margin-top: 60px;
+    margin-left: 40px;
+}
+
+#info > p{
+    font-size: 20px;
+}
+
+#relatorios-container{
+    align-self: normal;
+    margin-left: 120px;
+    margin-bottom: 200px;
+    margin-top: 151px;
+    display: flex;
+}
+
+#relatoriosdata{
+    width: 539px;
+    height: 437px;
+    border-radius: 16px;
+    background-color: #81A39C;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: inset 0 1px 5px black;  
+}    
+
+#relatoriosdata > #Usin{
+    width: 428px;
+    height: 57px;
+    border-radius: 16px;
+    background-color: #569689;
+    align-items: center;
+    display: flex;
+    font-size: 22px;
+    font-weight: 600;
+    margin-top: 48px;
+    box-shadow: inset 0 1px 4px black;
+    letter-spacing: 0.5px;
+}
+
+#datai{
+    width: 211px;
+    height: 57px;
+    border-radius: 16px;
+    background-color: #569689;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 600;
+    margin-top: 48px;
+    box-shadow: inset 0 1px 4px black;
+    letter-spacing: 0.5px;
+    margin-right: 6px;
+    display: flex;
+}
+
+#data-container{
+    display: flex;
+}
+
+#dataf{
+    display: flex;
+    width: 211px;
+    height: 57px;
+    border-radius: 16px;
+    background-color: #569689;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 600;
+    margin-top: 48px;
+    box-shadow: inset 0 1px 4px black;
+    letter-spacing: 0.5px;
+}
+
+.esquerda{
+    margin-left: 19px;
+}
+
+#ddp{
+    margin-top: 30px;
+    margin-left: 24px;
+    font-size: 20px;
+    line-height: 35px;
+}
+
+#problems{
+    font-size: 20px;
+    margin-left: 24px;
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+}
+
+li{
+    margin-left: 50px;
 }
