Capa da obra editável.
Adição do font-awesome para gerar o ícone de lápis.

--- a/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
@@ -1,5 +1,13 @@
 <app-navbar></app-navbar>
 
-<br>
+<!--CAPA-->
+<section class="container-capa">
+    <div class="capa">
+        <img [src]="imageSrc" alt="Imagem de capa" />
+        <button class="edit-button" (click)="editImage()">
+            <i class="fas fa-pencil-alt"></i> <!-- Ícone de lápis -->
+        </button>
+    </div>
+</section>
 
 <app-footer></app-footer>
