--- a/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/cadastrar-nova-obra/cadastrar-nova-obra.component.html
@@ -1,34 +1,79 @@
 <app-navbar></app-navbar>
 
-<!--Título-->
-<div class="titulo-principal">
+<!-- Título Principal -->
+<header class="titulo-principal">
   <h1>Siga o passo a passo para efetuar o <span class="negrito">cadastro</span> da sua <span class="negrito">obra com sucesso!</span></h1>
-</div>
+</header>
 
-<!--1º Passo-->
-<section class="primeiro-passo">
+<!-- Passo 1 -->
+<section class="passo passo-1">
   <h2>1º Passo</h2>
   <hr>
   <div class="form-container">
     <h3>Sobre a obra:</h3>
     <form>
-      <input type="text" placeholder="Nome da obra">
-      <input type="text" placeholder="Construtora">
-      <input type="text" placeholder="Localização (Cidade - Estado)">
-      <div class="prazo-conclusao">
-        <label class="prazo-label" [class.hidden]="dateValue">Prazo de conclusão geral</label>
-        <input type="date" [(ngModel)]="dateValue" (focus)="hideLabel()" (blur)="showLabel()">
+      <div class="campo">
+        <label for="nome-obra">Nome da obra</label>
+        <input type="text" id="nome-obra" placeholder="Nome da obra" required>
       </div>
-      <div class="anexar-imagem">
+      <div class="campo">
+        <label for="construtora">Construtora</label>
+        <input type="text" id="construtora" placeholder="Construtora" required>
+      </div>
+      <div class="campo">
+        <label for="localizacao">Localização (Cidade - Estado)</label>
+        <input type="text" id="localizacao" placeholder="Localização (Cidade - Estado)" required>
+      </div>
+      <div class="campo prazo-conclusao">
+        <label for="prazo-conclusao">Prazo de conclusão</label>
+        <input type="date" id="prazo-etapa">
+      </div>
+      <div class="campo anexar-imagem">
         <input type="file" id="imagem-capa" accept=".jpg, .jpeg, .png" hidden>
-        <label for="imagem-capa">
-          <input type="text" placeholder="Anexar imagem capa da obra">
+        <label for="imagem-capa">Imagem Capa</label>
+          <input type="text" placeholder="Anexar imagem capa da obra" disabled>
           <i class="fa fa-paperclip clip-icon"></i>
-        </label>
       </div>
     </form>
   </div>
 </section>
 
+<!-- Passo 2 -->
+<section class="passo passo-2">
+  <h2>2º Passo</h2>
+  <hr>
+  <div class="form-container">
+    <h3>Etapas da obra:</h3>
+    <h4>Etapa 1</h4>
+    <form>
+      <div class="campo">
+        <label for="nome-etapa">Nome da etapa</label>
+        <input type="text" id="nome-etapa" placeholder="Nome da etapa" required>
+      </div>
+      <div class="campo">
+        <label for="descricao-etapa">Descrição da etapa</label>
+        <textarea id="descricao-etapa" placeholder="Escreva sua mensagem aqui..." required></textarea>
+      </div>
+      <div class="campo prazo-conclusao">
+        <label for="prazo-conclusao">Prazo de conclusão</label>
+        <input type="date" id="prazo-etapa">
+      </div>
+      <div class="campo anexar-imagem">
+        <input type="file" id="imagem-etapa" accept=".jpg, .jpeg, .png" hidden>
+        <label for="imagem-etapa">Imagem da Etapa</label>
+          <input type="text" placeholder="Anexar imagem capa da etapa" disabled>
+          <i class="fa fa-paperclip clip-icon"></i>
+      </div>
+    </form>
+    <div class="nova-etapa">
+      <a href="#" class="nova-etapa-link">+ Nova Etapa</a>
+    </div>
+  </div>
+  <!-- Botões Cancelar e Cadastrar -->
+  <div class="botoes-container">
+    <button class="btn-cadastrar">CADASTRAR</button>
+    <button class="btn-cancelar">CANCELAR</button>
+  </div>
+</section>
 
 <app-footer></app-footer>
