ajuste obras finalizadas
backend obras finalizadas, ajustes obras e andamentos e ajuste cadastro de obras - com erro 500

--- a/projeto-concreta/WebSites/src/app/pages/menu-gestor-cliente/menu-gestor/menu-gestor.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/menu-gestor-cliente/menu-gestor/menu-gestor.component.html
@@ -3,6 +3,6 @@
         <h1 class="text-white text-4xl text-center">Fique por dentro:</h1>
         <p-button (onClick)="goToNovaObra()" label="Cadastrar Nova Obra"></p-button> 
         <p-button (onClick)="goToObrasEmAndamento()" label="Obras em Andamento"></p-button> 
-        <p-button (onClick)="goToObrasFinalizadas()" label="Obras Finalizadas" class="mb-4"></p-button> 
+        <p-button (onClick)="goToObraFinalizada()" label="Obras Finalizadas" class="mb-4"></p-button> 
     </div>
 </div>
