--- a/projeto-concreta/WebSites/src/app/pages/obra-andamento/obra-andamento.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/obra-andamento/obra-andamento.component.html
@@ -15,23 +15,23 @@
         </thead>
         <tbody>
           <!-- Iterando sobre as obras em andamento e exibindo os dados -->
-          <tr *ngFor="let obra of obrasEmAndamento">
+          <tr *ngFor="let obra of obrasEmAndamento | slice: 0:visibleCount">
             <td>{{ obra.nome }}</td>
             <td>{{ obra.construtora }}</td>
             <td>{{ obra.localizacao }}</td>
-            <td>{{ obra.dataFim }}</td>
+            <td>{{ obra.dataFim | date: 'dd/MM/yyyy' }}</td>
           </tr>
         </tbody>
       </table>
     </div>
 
     <div class="buttons" style="margin-top: 10px;">
-      <button class="btn back">
+      <button class="btn back" (click)="voltarParaMenu()">
         <img src="../../assets/icone-voltar.svg" alt="Ícone de voltar" />
         Voltar para o menu
       </button>
 
-      <button class="btn load-more">
+      <button class="btn load-more" *ngIf="visibleCount < obrasEmAndamento.length" (click)="carregarMaisObras()">
         <img src="../../assets/icone-andamento.svg" alt="Ícone de andamento"/>
         Carregar mais obras
       </button>
