final obra em andamento e obra finalizada

--- a/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/obra-especifica-gestor/obra-especifica-gestor.component.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="compartilhar-right">
-        <button class="btn obra-concluida">OBRA CONCLUÍDA</button>
+        <button class="btn obra-concluida" (click)="marcarComoConcluida()">OBRA CONCLUÍDA</button>
         <button class="btn excluir-obra">EXCLUIR OBRA</button>
     </div>
 </div>
