--- a/projeto-concreta/WebSites/src/app/pages/obra-andamento/obra-andamento.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/obra-andamento/obra-andamento.component.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody>
           <!-- Iterando sobre as obras em andamento e exibindo os dados -->
-          <tr *ngFor="let obra of obrasEmAndamento | slice: 0:visibleCount">
+          <tr *ngFor="let obra of obrasEmAndamento | slice: 0:visibleCount" (click)="irParaObraEspecifica(obra.idObra)" style="cursor: pointer;">
             <td>{{ obra.nome }}</td>
             <td>{{ obra.construtora }}</td>
             <td>{{ obra.localizacao }}</td>
