--- a/projeto-concreta/WebSites/src/app/navbar/navbar.component.html
+++ b/projeto-concreta/WebSites/src/app/navbar/navbar.component.html
@@ -18,11 +18,15 @@
                     <a (click)="scrollToSection('contato')" class="cursor-pointer" routerLink="/contato" routerLinkActive="active">Contato</a>
                 </li>
             </ul>
-            <div class="navbar-user">
-                <a routerLink="/user">
-                    <img src="../../assets/user-icon.svg" alt="Ícone de Usuário"/>
-                </a>
-            </div>
+            <div class="navbar-user" (click)="toggleUserMenu()">
+              <a>
+                  <img src="../../assets/user-icon.svg" alt="Ícone de Usuário"/>
+              </a>
+              <div *ngIf="isUserMenuOpen" class="user-menu">
+                  <a routerLink="/login" class="user-link">Login</a>
+                  <a routerLink="/cadastro" class="user-link">Cadastro</a>
+              </div>
+          </div>
         </div>
 
         <!-- Menu hamburguer para telas pequenas -->
