atualização final navbar

--- a/projeto-concreta/WebSites/src/app/navbar/navbar.component.html
+++ b/projeto-concreta/WebSites/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
               </a>
               <div *ngIf="isUserMenuOpen" class="user-menu">
                   <a routerLink="/login" class="user-link">Login</a>
-                  <a routerLink="/cadastro" class="user-link">Cadastro</a>
+                  <a routerLink="/cadastro-user" class="user-link">Cadastro</a>
               </div>
           </div>
         </div>
